log
Thu 21 Mar 2024 08:09:18 PM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:17: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   47 |     int valor = malloc(sizeof(int));
      |                 ^~~~~~
exercises.c:49:17: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
   49 |     push(Lista, valor);
      |                 ^~~~~
      |                 |
      |                 int
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
70f5dd8
Thu 21 Mar 2024 08:09:27 PM UTC: 
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:17: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   47 |     int valor = malloc(sizeof(int));
      |                 ^~~~~~
exercises.c:49:17: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
   49 |     push(Lista, valor);
      |                 ^~~~~
      |                 |
      |                 int
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
ec94e46
Thu 21 Mar 2024 08:09:49 PM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
8d758f1
Thu 21 Mar 2024 08:10:16 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:17: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
   51 |     push(Lista, *valor);
      |                 ^~~~~~
      |                 |
      |                 int
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
a4f32d2
Thu 21 Mar 2024 08:10:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:10: error: invalid use of incomplete typedef ‘List’
   51 |     push(*Lista, valor);
      |          ^~~~~~
Compilation failed
aa6ae86
Thu 21 Mar 2024 08:10:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c1ccab2
Thu 21 Mar 2024 08:10:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a84fdec
